Mon Sep  4 22:31:28 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (update_entries), import.c (expand_at_signs): Check for
	errors from fread and putc.

Fri Sep  1 00:03:17 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh: Fix TODO item pathname.

	* sanity.el: Removed.  It was out of date, didn't do much, and I
	doubt anyone was using it.

	* no_diff.c (No_Difference): Don't change the modes of the files.

Thu Aug 31 13:14:34 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* version.c: Change version to 1.5.1.

	* client.c (start_rsh_server): Don't pass -d to "cvs server"
	invocation via rsh (restore change which was lost when NT stuff
	was merged in).
	* sanity.sh: Add TODO item suggesting test for bug which this fixes.

Wed Aug 30 12:36:37 1995  Jim Blandy  <jimb@totoro.cyclic.com>

	* sanity.sh (basic1): Make sure first-dir is deleted before
	running this set of tests.

        * subr.c: Extract file twiddling functions to a different file,
	because we want to use different versions of many of these
	routines under Windows NT.
	(copy_file, isdir, islink, isfile, isreadable, iswritable,
	open_file, make_directory, make_directories, xchmod,
	rename_file, link_file, unlink_file, xcmp, tmpnam,
	unlink_file_dir, deep_remove_dir): Moved to...
	* filesubr.c: ...this file, which is new.
	* Makefile.in (SOURCES): Mention filesubr.c.
	(COMMON_OBJECTS): Mention filesubr.o.

	* subr.c: Extract process execution guts to a different file,
	because we want to replace these routines entirely under
	Windows NT.
	(VA_START, va_alist, va_dcl): Move this stuff...
	(run_add_arg, run_init_prog): and these declarations...
	(run_prog, run_argv, run_argc, run_argc_allocated): and these
	variables...
	(run_setup, run_arg, run_args, run_add_arg, run_init_prog,
	run_exec, run_print, Popen): and these functions...
	* run.c: To this file, which is new.
	* Makefile.in (SOURCES): Mention run.c.
	(COMMON_OBJECTS): Mention run.o.
